Run Audience Reaction section to show the results

--- a/Text Analysis.ipynb
+++ b/Text Analysis.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T07:59:46.428727Z",
-     "start_time": "2020-07-22T07:59:45.796971Z"
+     "end_time": "2020-08-03T16:59:50.740148Z",
+     "start_time": "2020-08-03T16:59:49.473192Z"
     }
    },
    "outputs": [],
@@ -23,8 +23,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T07:59:47.258316Z",
-     "start_time": "2020-07-22T07:59:46.893759Z"
+     "end_time": "2020-08-03T16:59:51.174940Z",
+     "start_time": "2020-08-03T16:59:50.754147Z"
     }
    },
    "outputs": [
@@ -69,8 +69,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T07:59:49.258597Z",
-     "start_time": "2020-07-22T07:59:49.244594Z"
+     "end_time": "2020-08-03T16:59:51.202937Z",
+     "start_time": "2020-08-03T16:59:51.182940Z"
     }
    },
    "outputs": [],
@@ -84,8 +84,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T07:59:54.610273Z",
-     "start_time": "2020-07-22T07:59:50.700177Z"
+     "end_time": "2020-08-03T16:59:55.698486Z",
+     "start_time": "2020-08-03T16:59:51.213936Z"
     },
     "tags": []
    },
@@ -121,8 +121,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T07:59:56.781714Z",
-     "start_time": "2020-07-22T07:59:56.772706Z"
+     "end_time": "2020-08-03T16:59:55.741487Z",
+     "start_time": "2020-08-03T16:59:55.718490Z"
     },
     "scrolled": true
    },
@@ -155,8 +155,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T08:00:00.599694Z",
-     "start_time": "2020-07-22T07:59:59.028419Z"
+     "end_time": "2020-08-03T16:59:58.214403Z",
+     "start_time": "2020-08-03T16:59:55.749488Z"
     }
    },
    "outputs": [],
@@ -185,8 +185,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T08:00:06.029551Z",
-     "start_time": "2020-07-22T08:00:05.995899Z"
+     "end_time": "2020-08-03T16:59:58.259405Z",
+     "start_time": "2020-08-03T16:59:58.219405Z"
     }
    },
    "outputs": [],
@@ -200,8 +200,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T08:00:07.188012Z",
-     "start_time": "2020-07-22T08:00:07.149013Z"
+     "end_time": "2020-08-03T16:59:59.128927Z",
+     "start_time": "2020-08-03T16:59:59.081923Z"
     },
     "scrolled": false
    },
@@ -598,9 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Analyze with Audience Reactions###\n",
     "><b>Hypothesis:</b><br>\n",
@@ -616,13 +614,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T07:59:38.581537Z",
-     "start_time": "2020-07-22T07:51:06.324Z"
-    },
-    "hidden": true
+     "end_time": "2020-08-03T17:00:02.505270Z",
+     "start_time": "2020-08-03T17:00:02.460262Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -632,15 +629,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T07:59:38.589536Z",
-     "start_time": "2020-07-22T07:51:06.328Z"
-    },
-    "hidden": true
+     "end_time": "2020-08-03T17:00:03.860683Z",
+     "start_time": "2020-08-03T17:00:03.820685Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "785"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reaction_corpus=set()\n",
     "all_reactions= []\n",
@@ -652,15 +659,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T07:59:38.595536Z",
-     "start_time": "2020-07-22T07:51:06.331Z"
-    },
-    "hidden": true
+     "end_time": "2020-08-03T17:00:05.895440Z",
+     "start_time": "2020-08-03T17:00:05.884437Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Laughter', 10011),\n",
+       " ('Applause', 5251),\n",
+       " ('Music', 530),\n",
+       " ('Video', 311),\n",
+       " ('Audio', 54),\n",
+       " ('Laughs', 49),\n",
+       " ('Music ends', 44),\n",
+       " ('Applause ends', 42),\n",
+       " ('Cheers', 39),\n",
+       " ('Singing', 34),\n",
+       " ('Beatboxing', 17),\n",
+       " ('English', 17),\n",
+       " ('Cheering', 16),\n",
+       " ('Sighs', 16),\n",
+       " ('k', 16),\n",
+       " ('Whistling', 15),\n",
+       " ('Guitar', 14),\n",
+       " ('Guitar strum', 14),\n",
+       " ('Sings', 13),\n",
+       " ('Audience', 12)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "c = Counter(all_reactions)\n",
@@ -669,13 +705,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T07:59:38.602536Z",
-     "start_time": "2020-07-22T07:51:06.335Z"
-    },
-    "hidden": true
+     "end_time": "2020-08-03T17:00:09.003951Z",
+     "start_time": "2020-08-03T17:00:08.980952Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -685,16 +720,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-22T07:59:38.609536Z",
-     "start_time": "2020-07-22T07:51:06.338Z"
+     "end_time": "2020-08-03T17:00:09.817751Z",
+     "start_time": "2020-08-03T17:00:09.796750Z"
     },
-    "hidden": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>laugh_count</th>\n",
+       "      <th>applause_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>OK</th>\n",
+       "      <td>-0.137406</td>\n",
+       "      <td>-0.258776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Funny</th>\n",
+       "      <td>0.628123</td>\n",
+       "      <td>0.161494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ingenious</th>\n",
+       "      <td>0.012971</td>\n",
+       "      <td>0.053914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Longwinded</th>\n",
+       "      <td>-0.003550</td>\n",
+       "      <td>-0.154451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Persuasive</th>\n",
+       "      <td>-0.135416</td>\n",
+       "      <td>-0.119936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Courageous</th>\n",
+       "      <td>-0.050884</td>\n",
+       "      <td>0.119973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jaw-dropping</th>\n",
+       "      <td>-0.000184</td>\n",
+       "      <td>0.220833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unconvincing</th>\n",
+       "      <td>-0.122059</td>\n",
+       "      <td>-0.164080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inspiring</th>\n",
+       "      <td>-0.032594</td>\n",
+       "      <td>0.155343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Informative</th>\n",
+       "      <td>-0.227705</td>\n",
+       "      <td>-0.295182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fascinating</th>\n",
+       "      <td>-0.018661</td>\n",
+       "      <td>-0.040782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beautiful</th>\n",
+       "      <td>-0.052919</td>\n",
+       "      <td>0.106888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Obnoxious</th>\n",
+       "      <td>0.048476</td>\n",
+       "      <td>-0.036310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Confusing</th>\n",
+       "      <td>-0.024274</td>\n",
+       "      <td>-0.143409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>laugh_count</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.378318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>applause_count</th>\n",
+       "      <td>0.378318</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                laugh_count  applause_count\n",
+       "OK                -0.137406       -0.258776\n",
+       "Funny              0.628123        0.161494\n",
+       "Ingenious          0.012971        0.053914\n",
+       "Longwinded        -0.003550       -0.154451\n",
+       "Persuasive        -0.135416       -0.119936\n",
+       "Courageous        -0.050884        0.119973\n",
+       "Jaw-dropping      -0.000184        0.220833\n",
+       "Unconvincing      -0.122059       -0.164080\n",
+       "Inspiring         -0.032594        0.155343\n",
+       "Informative       -0.227705       -0.295182\n",
+       "Fascinating       -0.018661       -0.040782\n",
+       "Beautiful         -0.052919        0.106888\n",
+       "Obnoxious          0.048476       -0.036310\n",
+       "Confusing         -0.024274       -0.143409\n",
+       "laugh_count        1.000000        0.378318\n",
+       "applause_count     0.378318        1.000000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# correlation results\n",
     "audience_reaction_df.corr()[['laugh_count','applause_count']]"
